@@ -18,6 +18,8 @@ ubiquity-slideshow-ubuntu (13) UNRELEASED; urgency=low
   * Remove htmlclean as its in universe and not currently worth the MIR.
   * Tidy up generate-local-slides.sh and make it less noisy.
   * Updated translations from Launchpad.
+  * Add update-launchpad-translations.sh, a small bit of shell code to
+    take the grunt work out of updating translations.
 
  -- Dylan McCall <dylan@dylan-laptop>  Tue, 02 Feb 2010 13:09:28 -0800
 
